# BigFloat

./: BigFloat.cpp  BigFloat.h  CMakeLists.txt  main.cpp  tests.cpp
